--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.2.3",
-    "@astrojs/react": "^4.2.3",
+    "@astrojs/mdx": "^4.2.5",
+    "@astrojs/react": "^4.2.6",
+    "@fontsource-variable/open-sans": "^5.2.5",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.2",
-    "astro": "^5.6.1",
+    "astro": "^5.7.9",
     "mdx": "^0.2.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
